--- a/Finals/finals.css
+++ b/Finals/finals.css
@@ -54,10 +54,13 @@ nav {
 	color: #FF7FA7;
 	margin-left: 35%;
 	-webkit-text-stroke: 0.5px #7A3D51;
+	padding: 10px;
+	padding-top: 0px;
+	border: solid 2px ;
+
 }
 .information h1{
 	font-size: 50px;
-	margin-top: 24px;
 	margin-bottom: 15px;
 }
 .information p{
@@ -84,10 +87,11 @@ nav {
   text-align: center;
   margin-left: 2px;
   margin-bottom: 15px;
-/*  color: #f0eee9;*/
-  background: -webkit-linear-gradient(#5f4b8b, #00abc0, #f0eee9, #00abc0, #5f4b8b);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #f0eee9;
+/*  background: -webkit-linear-gradient(#5f4b8b, #00abc0, #f0eee9, #00abc0, #5f4b8b);*/
+  /*-webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;*/
+  -webkit-text-stroke: 0.5px #00abc0;
 }
 
 /* Number text (1/3 etc) */
